# ai-real-estate-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.idx/: dev.nix
.idx/.data/postgres/: postmaster.pid
.idx/.data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841
.idx/.data/postgres/base/24577/: 113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  14392  14392_fsm  14392_vm  14396  14397  14397_fsm  14397_vm  14402  14402_fsm  14402_vm  14406  14407  14407_fsm  14407_vm  14411  175  2187  2228  24585  24585_fsm  24589  24590  24597_fsm  24597_vm  24601  2579  2600  (+190 more)
.idx/.data/postgres/base/5/: 1247  1249  1249_vm  1259  1259_vm  2579  2606  2608  2610  2610_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455
.idx/.data/postgres/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
server/: README.md  datasets_import.py  geocoding_address.py  main.py  model_fine_tune.py  model_fine_tuning_generator.py  models.py  pyproject.toml  scraper.py  test_scraper.py
server/data/: homelistings.csv  homelistings_fine_tuning_gpt_3_5_turbo.jsonl
src/: App.css  App.jsx  main.jsx
src/Components/ChatInterface/: ChatInterface.css  ChatInterface.jsx
src/Components/ListingResponse/: ListingResponse.css  ListingResponse.jsx
src/Components/ListingResponseMap/: ListingResponseMap.css  ListingResponseMap.jsx
src/utils/: formatPrice.jsx
